--- a/manifest.json
+++ b/manifest.json
@@ -244,7 +244,8 @@
 					"js/mui.zoom.js",
 					"js/mui.previewimage.js",
 					"imgs/HoleAxisLength.gif",
-					"data/HoleAxisLengthData.js"
+					"data/HoleAxisLengthData.js",
+					"js/Common.js"
 				],
 				"refer": [],
 				"priority": 0
