--- a/manifest.json
+++ b/manifest.json
@@ -231,7 +231,8 @@
 				],
 				"refer": [
 					"Pages/linear/HoleAxisLength.html",
-					"Pages/linear/HoleAndScrewDepth.html"
+					"Pages/linear/HoleAndScrewDepth.html",
+					"Pages/linear/CornorChamAndAngle.html"
 				],
 				"priority": 0
 			},
@@ -256,7 +257,33 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"imgs/HoleAndScrewDepth.gif"
+					"imgs/HoleAndScrewDepth.gif",
+					"css/imageViewer.css",
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js",
+					"js/Common.js",
+					"js/mui.picker.min.js",
+					"js/mui.poppicker.js",
+					"css/mui.poppicker.css",
+					"css/mui.picker.min.css",
+					"js/mui.picker.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/linear/CornorChamAndAngle.html": {
+				"resources": [
+					"js/mui.picker.js",
+					"js/mui.zoom.js",
+					"imgs/CornorChamAndAngle.gif",
+					"css/imageViewer.css",
+					"js/mui.poppicker.js",
+					"js/mui.previewimage.js",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/mui.poppicker.css",
+					"css/mui.picker.min.css"
 				],
 				"refer": [],
 				"priority": 0
