--- a/manifest.json
+++ b/manifest.json
@@ -17,91 +17,21 @@
 		"url": "http://www.dcloud.io"
 	},
 	"permissions": {
-		"Accelerometer": {
-            "description": "访问加速度感应器"
-        },
-        "Audio": {
-            "description": "访问麦克风"
-        },
+		
+        
         "Cache": {
             "description": "管理应用缓存"
         },
-        "Camera": {
-            "description": "访问摄像头"
-        },
+        
         "Console": {
             "description": "跟踪调试输出日志"
         },
-        "Contacts": {
-            "description": "访问系统联系人信息"
-        },
-        "Device": {
-            "description": "访问设备信息"
-        },
-        "Downloader": {
-            "description": "文件下载管理"
-        },
+        
+        
+        
         "Events": {
             "description": "应用扩展事件"
-        },
-        "File": {
-            "description": "访问本地文件系统"
-        },
-        "Gallery": {
-            "description": "访问系统相册"
-        },
-        "Geolocation": {
-            "description": "访问位置信息"
-        },
-         "Invocation": {
-            "description": "使用Native.js能力"
-        },
-        "Messaging": {
-            "description": "访问通讯能力"
-        },
-        "Orientation": {
-            "description": "访问方向感应器"
-        },
-        "Proximity": {
-            "description": "访问距离感应器"
-        },
-        "Storage": {
-            "description": "管理应用本地数据"
-        },
-        
-        "Uploader": {
-            "description": "管理文件上传任务"
-        },
-        "Runtime": {
-            "description": "访问运行期环境"
-        },
-        "XMLHttpRequest": {
-            "description": "跨域网络访问"
-        },
-        "Zip": {
-            "description": "文件压缩与解压缩"
-        },
-        "Barcode": {
-            "description": "管理二维码扫描插件"
-        },
-        "Maps": {
-            "description": "管理地图插件"
-        },
-        "Speech": {
-            "description": "管理语音识别插件"
-        },
-        "Webview":{
-        	"description": "窗口管理"
-        },
-        "NativeUI":{
-        	"description": "原生UI控件"
-        },
-        "Navigator":{
-        	"description": "浏览器信息"
-        },
-        "NativeObj":{
-        	"description": "原生对象"
-        }
+        },"Webview":{},"NativeUI":{}
 	},
 	"plus": {
 		"splashscreen": {
@@ -124,7 +54,7 @@
 				"keystore": "",/*Android应用打包使用的密钥库文件*/
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
-				"permissions": ["<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>","<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>","<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>","<uses-permission android:name=\"android.permission.VIBRATE\"/>","<uses-permission android:name=\"android.permission.READ_LOGS\"/>","<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>","<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>","<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>","<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>","<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>","<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>","<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>","<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-permission android:name=\"android.permission.CALL_PHONE\"/>","<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>","<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"]
+				"permissions": ["<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>"]
 			},
 			"orientation": ["portrait-primary", "portrait-secondary"],/*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
 			"icons": {
@@ -132,34 +62,34 @@
 					"prerendered": true, /*应用图标是否已经高亮处理，在iOS6及以下设备上有效*/
 					"auto": "", /*应用图标，分辨率：512x512，用于自动生成各种尺寸程序图标*/
 					"iphone": {
-						"normal": "",/*iPhone普通屏幕程序图标，分辨率：57x57*/
-						"retina": "",/*iPhone高分屏程序图标，分辨率：114x114*/
-						"retina7": "",/*iPhone iOS7高分屏程序图标，分辨率：120x120*/
-						"spotlight-normal": "", /*iPhone Spotlight搜索程序图标，分辨率：29x29*/
-						"spotlight-retina": "", /*iPhone高分屏Spotlight搜索程序图标，分辨率：58x58*/
-						"spotlight-retina7": "",/*iPhone iOS7高分屏Spotlight搜索程序图标，分辨率：80x80*/
-						"settings-normal": "", /*iPhone设置页面程序图标，分辨率：29x29*/
-						"settings-retina": ""
+						"normal": "unpackage/res/icons/57x57.png",/*iPhone普通屏幕程序图标，分辨率：57x57*/
+						"retina": "unpackage/res/icons/114x114.png",/*iPhone高分屏程序图标，分辨率：114x114*/
+						"retina7": "unpackage/res/icons/120x120.png",/*iPhone iOS7高分屏程序图标，分辨率：120x120*/
+						"spotlight-normal": "unpackage/res/icons/29x29.png", /*iPhone Spotlight搜索程序图标，分辨率：29x29*/
+						"spotlight-retina": "unpackage/res/icons/58x58.png", /*iPhone高分屏Spotlight搜索程序图标，分辨率：58x58*/
+						"spotlight-retina7": "unpackage/res/icons/80x80.png",/*iPhone iOS7高分屏Spotlight搜索程序图标，分辨率：80x80*/
+						"settings-normal": "unpackage/res/icons/29x29.png", /*iPhone设置页面程序图标，分辨率：29x29*/
+						"settings-retina": "unpackage/res/icons/58x58.png","retina8":"unpackage/res/icons/180x180.png","settings-retina8":"unpackage/res/icons/87x87.png"
 					},
 					"ipad": {
-						"normal": "", /*iPad普通屏幕程序图标，分辨率：72x72*/
-						"retina": "", /*iPad高分屏程序图标，分辨率：144x144*/
-						"normal7": "", /*iPad iOS7程序图标，分辨率：76x76*/
-						"retina7": "", /*iPad iOS7高分屏程序图标，分辨率：152x152*/
-						"spotlight-normal": "", /*iPad Spotlight搜索程序图标，分辨率：50x50*/
-						"spotlight-retina": "", /*iPad高分屏Spotlight搜索程序图标，分辨率：100x100*/
-						"spotlight-normal7": "",/*iPad iOS7 Spotlight搜索程序图标，分辨率：40x40*/
-						"spotlight-retina7": "",/*iPad iOS7高分屏Spotlight搜索程序图标，分辨率：80x80*/
-						"settings-normal": "",/*iPad设置页面程序图标，分辨率：29x29*/
-						"settings-retina": ""
+						"normal": "unpackage/res/icons/72x72.png", /*iPad普通屏幕程序图标，分辨率：72x72*/
+						"retina": "unpackage/res/icons/144x144.png", /*iPad高分屏程序图标，分辨率：144x144*/
+						"normal7": "unpackage/res/icons/76x76.png", /*iPad iOS7程序图标，分辨率：76x76*/
+						"retina7": "unpackage/res/icons/152x152.png", /*iPad iOS7高分屏程序图标，分辨率：152x152*/
+						"spotlight-normal": "unpackage/res/icons/50x50.png", /*iPad Spotlight搜索程序图标，分辨率：50x50*/
+						"spotlight-retina": "unpackage/res/icons/100x100.png", /*iPad高分屏Spotlight搜索程序图标，分辨率：100x100*/
+						"spotlight-normal7": "unpackage/res/icons/40x40.png",/*iPad iOS7 Spotlight搜索程序图标，分辨率：40x40*/
+						"spotlight-retina7": "unpackage/res/icons/80x80.png",/*iPad iOS7高分屏Spotlight搜索程序图标，分辨率：80x80*/
+						"settings-normal": "unpackage/res/icons/29x29.png",/*iPad设置页面程序图标，分辨率：29x29*/
+						"settings-retina": "unpackage/res/icons/58x58.png"
 					}
 				},
 				"android": {
-					"mdpi": "", /*普通屏程序图标，分辨率：48x48*/
-					"ldpi": "", /*大屏程序图标，分辨率：48x48*/
-					"hdpi": "", /*高分屏程序图标，分辨率：72x72*/
-					"xhdpi": "",/*720P高分屏程序图标，分辨率：96x96*/
-					"xxhdpi": ""
+					"mdpi": "unpackage/res/icons/48x48.png", /*普通屏程序图标，分辨率：48x48*/
+					"ldpi": "unpackage/res/icons/48x48.png", /*大屏程序图标，分辨率：48x48*/
+					"hdpi": "unpackage/res/icons/72x72.png", /*高分屏程序图标，分辨率：72x72*/
+					"xhdpi": "unpackage/res/icons/96x96.png",/*720P高分屏程序图标，分辨率：96x96*/
+					"xxhdpi": "unpackage/res/icons/144x144.png"
 				}
 			},
 			"splashscreen": {
@@ -191,111 +121,152 @@
 		}
 	},
 	"dependencies": {
-		"pages": {
-			"index.html": {
-				"resources": [
-					"js/mui.min.js",
-					"fonts/mui.ttf",
-					"css/mui.min.css",
-					"content.html"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"Pages/linear.html": {
-				"resources": [
-					"fonts/mui.ttf",
-					"js/mui.min.js",
-					"css/mui.min.css"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"content.html": {
-				"resources": [
-					"js/mui.min.js",
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"css/iconfont.css",
-					"fonts/iconfont.ttf",
-					"css/mui.css"
-				],
-				"refer": [
-					"Pages/linear.html",
-					"Pages/linear/linearContent.html"
-				],
-				"priority": 0
-			},
-			"Pages/linear/linearContent.html": {
-				"resources": [
-					"js/mui.min.js",
-					"fonts/mui.ttf",
-					"css/mui.min.css"
-				],
-				"refer": [
-					"Pages/linear/HoleAxisLength.html",
-					"Pages/linear/HoleAndScrewDepth.html",
-					"Pages/linear/CornorChamAndAngle.html"
-				],
-				"priority": 0
-			},
-			"Pages/linear/HoleAxisLength.html": {
-				"resources": [
-					"js/mui.min.js",
-					"css/mui.min.css",
-					"fonts/mui.ttf",
-					"imgs/HoleAxisLength.png",
-					"css/imageViewer.css",
-					"js/mui.zoom.js",
-					"js/mui.previewimage.js",
-					"imgs/HoleAxisLength.gif",
-					"data/HoleAxisLengthData.js",
-					"js/Common.js"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"Pages/linear/HoleAndScrewDepth.html": {
-				"resources": [
-					"js/mui.min.js",
-					"fonts/mui.ttf",
-					"css/mui.min.css",
-					"imgs/HoleAndScrewDepth.gif",
-					"css/imageViewer.css",
-					"js/mui.zoom.js",
-					"js/mui.previewimage.js",
-					"js/Common.js",
-					"js/mui.picker.min.js",
-					"js/mui.poppicker.js",
-					"css/mui.poppicker.css",
-					"css/mui.picker.min.css",
-					"js/mui.picker.js"
-				],
-				"refer": [],
-				"priority": 0
-			},
-			"Pages/linear/CornorChamAndAngle.html": {
-				"resources": [
-					"js/mui.picker.js",
-					"js/mui.zoom.js",
-					"imgs/CornorChamAndAngle.gif",
-					"css/imageViewer.css",
-					"js/mui.poppicker.js",
-					"js/mui.previewimage.js",
-					"js/mui.min.js",
-					"fonts/mui.ttf",
-					"css/mui.min.css",
-					"css/mui.poppicker.css",
-					"css/mui.picker.min.css"
-				],
-				"refer": [],
-				"priority": 0
-			}
-		},
-		"idle": {
-			"resources": [
-				"js/mui.js"
-			]
-		}
-	}
+	  "pages": {
+	    "index.html": {
+	      "resources": [
+	        "js/mui.min.js",
+	        "fonts/mui.ttf",
+	        "css/mui.min.css",
+	        "content.html"
+	      ],
+	      "refer": [
+	        "content.html"
+	      ],
+	      "priority": 0
+	    },
+	    "Pages/linear.html": {
+	      "resources": [
+	        "fonts/mui.ttf",
+	        "js/mui.min.js",
+	        "css/mui.min.css"
+	      ],
+	      "refer": [],
+	      "priority": 0
+	    },
+	    "content.html": {
+	      "resources": [
+	        "js/mui.min.js",
+	        "css/mui.min.css",
+	        "fonts/mui.ttf",
+	        "css/iconfont.css",
+	        "fonts/iconfont.ttf",
+	        "css/mui.css",
+	        "js/h.min.js"
+	      ],
+	      "refer": [
+	        "Pages/linear.html",
+	        "Pages/linear/linearContent.html"
+	      ],
+	      "priority": 0
+	    },
+	    "Pages/linear/linearContent.html": {
+	      "resources": [
+	        "js/mui.min.js",
+	        "fonts/mui.ttf",
+	        "css/mui.min.css"
+	      ],
+	      "refer": [
+	        "Pages/linear/HoleAxisLength.html",
+	        "Pages/linear/HoleAndScrewDepth.html",
+	        "Pages/linear/CornorChamAndAngle.html",
+	        "Pages/linear/RadiusR.html",
+	        "Pages/linear/Edges.html"
+	      ],
+	      "priority": 0
+	    },
+	    "Pages/linear/HoleAxisLength.html": {
+	      "resources": [
+	        "js/mui.min.js",
+	        "css/mui.min.css",
+	        "fonts/mui.ttf",
+	        "imgs/HoleAxisLength.png",
+	        "css/imageViewer.css",
+	        "js/mui.zoom.js",
+	        "js/mui.previewimage.js",
+	        "imgs/HoleAxisLength.gif",
+	        "data/HoleAxisLengthData.js",
+	        "js/Common.js"
+	      ],
+	      "refer": [],
+	      "priority": 0
+	    },
+	    "Pages/linear/HoleAndScrewDepth.html": {
+	      "resources": [
+	        "js/mui.min.js",
+	        "fonts/mui.ttf",
+	        "css/mui.min.css",
+	        "imgs/HoleAndScrewDepth.gif",
+	        "css/imageViewer.css",
+	        "js/mui.zoom.js",
+	        "js/mui.previewimage.js",
+	        "js/Common.js",
+	        "js/mui.picker.min.js",
+	        "js/mui.poppicker.js",
+	        "css/mui.poppicker.css",
+	        "css/mui.picker.min.css",
+	        "js/mui.picker.js"
+	      ],
+	      "refer": [],
+	      "priority": 0
+	    },
+	    "Pages/linear/CornorChamAndAngle.html": {
+	      "resources": [
+	        "js/mui.picker.js",
+	        "js/mui.zoom.js",
+	        "imgs/CornorChamAndAngle.gif",
+	        "css/imageViewer.css",
+	        "js/mui.poppicker.js",
+	        "js/mui.previewimage.js",
+	        "js/mui.min.js",
+	        "fonts/mui.ttf",
+	        "css/mui.min.css",
+	        "css/mui.poppicker.css",
+	        "css/mui.picker.min.css"
+	      ],
+	      "refer": [],
+	      "priority": 0
+	    },
+	    "Pages/linear/RadiusR.html": {
+	      "resources": [
+	        "js/mui.picker.js",
+	        "js/mui.zoom.js",
+	        "js/mui.min.js",
+	        "css/imageViewer.css",
+	        "js/mui.poppicker.js",
+	        "fonts/mui.ttf",
+	        "css/mui.min.css",
+	        "js/mui.previewimage.js",
+	        "css/mui.poppicker.css",
+	        "css/mui.picker.min.css",
+	        "imgs/RadiusTolerance1.gif",
+	        "imgs/RadiusTolerance2.gif"
+	      ],
+	      "refer": [],
+	      "priority": 0
+	    },
+	    "Pages/linear/Edges.html": {
+	      "resources": [
+	        "js/mui.zoom.js",
+	        "js/mui.min.js",
+	        "css/imageViewer.css",
+	        "fonts/mui.ttf",
+	        "css/mui.min.css",
+	        "js/mui.previewimage.js",
+	        "imgs/Edge.gif"
+	      ],
+	      "refer": [],
+	      "priority": 0
+	    }
+	  },
+	  "idle": {
+	    "resources": [
+	      "js/mui.js",
+	      "README.md"
+	    ]
+	  }
+	},
+	"unpackage":[
+	  "js/mui.js",
+	  "README.md"
+	]
 }
