完成概述内容

--- a/manifest.json
+++ b/manifest.json
@@ -121,149 +121,197 @@
 		}
 	},
 	"dependencies": {
-	  "pages": {
-	    "index.html": {
-	      "resources": [
-	        "js/mui.min.js",
-	        "fonts/mui.ttf",
-	        "css/mui.min.css",
-	        "content.html"
-	      ],
-	      "refer": [
-	        "content.html"
-	      ],
-	      "priority": 0
-	    },
-	    "Pages/linear.html": {
-	      "resources": [
-	        "fonts/mui.ttf",
-	        "js/mui.min.js",
-	        "css/mui.min.css"
-	      ],
-	      "refer": [],
-	      "priority": 0
-	    },
-	    "content.html": {
-	      "resources": [
-	        "js/mui.min.js",
-	        "css/mui.min.css",
-	        "fonts/mui.ttf",
-	        "css/iconfont.css",
-	        "fonts/iconfont.ttf",
-	        "css/mui.css",
-	        "js/h.min.js"
-	      ],
-	      "refer": [
-	        "Pages/linear.html",
-	        "Pages/linear/linearContent.html"
-	      ],
-	      "priority": 0
-	    },
-	    "Pages/linear/linearContent.html": {
-	      "resources": [
-	        "js/mui.min.js",
-	        "fonts/mui.ttf",
-	        "css/mui.min.css"
-	      ],
-	      "refer": [
-	        "Pages/linear/HoleAxisLength.html",
-	        "Pages/linear/HoleAndScrewDepth.html",
-	        "Pages/linear/CornorChamAndAngle.html",
-	        "Pages/linear/RadiusR.html",
-	        "Pages/linear/Edges.html"
-	      ],
-	      "priority": 0
-	    },
-	    "Pages/linear/HoleAxisLength.html": {
-	      "resources": [
-	        "js/mui.min.js",
-	        "css/mui.min.css",
-	        "fonts/mui.ttf",
-	        "imgs/HoleAxisLength.png",
-	        "css/imageViewer.css",
-	        "js/mui.zoom.js",
-	        "js/mui.previewimage.js",
-	        "imgs/HoleAxisLength.gif",
-	        "data/HoleAxisLengthData.js",
-	        "js/Common.js"
-	      ],
-	      "refer": [],
-	      "priority": 0
-	    },
-	    "Pages/linear/HoleAndScrewDepth.html": {
-	      "resources": [
-	        "js/mui.min.js",
-	        "fonts/mui.ttf",
-	        "css/mui.min.css",
-	        "imgs/HoleAndScrewDepth.gif",
-	        "css/imageViewer.css",
-	        "js/mui.zoom.js",
-	        "js/mui.previewimage.js",
-	        "js/Common.js",
-	        "js/mui.picker.min.js",
-	        "js/mui.poppicker.js",
-	        "css/mui.poppicker.css",
-	        "css/mui.picker.min.css",
-	        "js/mui.picker.js"
-	      ],
-	      "refer": [],
-	      "priority": 0
-	    },
-	    "Pages/linear/CornorChamAndAngle.html": {
-	      "resources": [
-	        "js/mui.picker.js",
-	        "js/mui.zoom.js",
-	        "imgs/CornorChamAndAngle.gif",
-	        "css/imageViewer.css",
-	        "js/mui.poppicker.js",
-	        "js/mui.previewimage.js",
-	        "js/mui.min.js",
-	        "fonts/mui.ttf",
-	        "css/mui.min.css",
-	        "css/mui.poppicker.css",
-	        "css/mui.picker.min.css"
-	      ],
-	      "refer": [],
-	      "priority": 0
-	    },
-	    "Pages/linear/RadiusR.html": {
-	      "resources": [
-	        "js/mui.picker.js",
-	        "js/mui.zoom.js",
-	        "js/mui.min.js",
-	        "css/imageViewer.css",
-	        "js/mui.poppicker.js",
-	        "fonts/mui.ttf",
-	        "css/mui.min.css",
-	        "js/mui.previewimage.js",
-	        "css/mui.poppicker.css",
-	        "css/mui.picker.min.css",
-	        "imgs/RadiusTolerance1.gif",
-	        "imgs/RadiusTolerance2.gif"
-	      ],
-	      "refer": [],
-	      "priority": 0
-	    },
-	    "Pages/linear/Edges.html": {
-	      "resources": [
-	        "js/mui.zoom.js",
-	        "js/mui.min.js",
-	        "css/imageViewer.css",
-	        "fonts/mui.ttf",
-	        "css/mui.min.css",
-	        "js/mui.previewimage.js",
-	        "imgs/Edge.gif"
-	      ],
-	      "refer": [],
-	      "priority": 0
-	    }
-	  },
-	  "idle": {
-	    "resources": [
-	      "js/mui.js",
-	      "README.md"
-	    ]
-	  }
+		"pages": {
+			"index.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"content.html"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/linear.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"js/mui.min.js",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"content.html": {
+				"resources": [
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"css/iconfont.css",
+					"fonts/iconfont.ttf",
+					"css/mui.css",
+					"js/h.min.js"
+				],
+				"refer": [
+					"Pages/linear.html",
+					"Pages/linear/linearContent.html",
+					"Pages/Preface/Preface.html",
+					"Pages/Preface/Range.html",
+					"Pages/Preface/RefStandard.html",
+					"Pages/Preface/Definition.html",
+					"Pages/Preface/GeneralPrinciples.html"
+				],
+				"priority": 0
+			},
+			"Pages/linear/linearContent.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [
+					"Pages/linear/HoleAxisLength.html",
+					"Pages/linear/HoleAndScrewDepth.html",
+					"Pages/linear/CornorChamAndAngle.html",
+					"Pages/linear/RadiusR.html",
+					"Pages/linear/Edges.html"
+				],
+				"priority": 0
+			},
+			"Pages/linear/HoleAxisLength.html": {
+				"resources": [
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"imgs/HoleAxisLength.png",
+					"css/imageViewer.css",
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js",
+					"imgs/HoleAxisLength.gif",
+					"data/HoleAxisLengthData.js",
+					"js/Common.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/linear/HoleAndScrewDepth.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"imgs/HoleAndScrewDepth.gif",
+					"css/imageViewer.css",
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js",
+					"js/Common.js",
+					"js/mui.picker.min.js",
+					"js/mui.poppicker.js",
+					"css/mui.poppicker.css",
+					"css/mui.picker.min.css",
+					"js/mui.picker.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/linear/CornorChamAndAngle.html": {
+				"resources": [
+					"js/mui.picker.js",
+					"js/mui.zoom.js",
+					"imgs/CornorChamAndAngle.gif",
+					"css/imageViewer.css",
+					"js/mui.poppicker.js",
+					"js/mui.previewimage.js",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/mui.poppicker.css",
+					"css/mui.picker.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/linear/RadiusR.html": {
+				"resources": [
+					"js/mui.picker.js",
+					"js/mui.zoom.js",
+					"js/mui.min.js",
+					"css/imageViewer.css",
+					"js/mui.poppicker.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"js/mui.previewimage.js",
+					"css/mui.poppicker.css",
+					"css/mui.picker.min.css",
+					"imgs/RadiusTolerance1.gif",
+					"imgs/RadiusTolerance2.gif"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/linear/Edges.html": {
+				"resources": [
+					"js/mui.zoom.js",
+					"js/mui.min.js",
+					"css/imageViewer.css",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"js/mui.previewimage.js",
+					"imgs/Edge.gif"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/Preface/Preface.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/Preface/Range.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/Preface/RefStandard.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/Preface/Definition.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"Pages/Preface/GeneralPrinciples.html": {
+				"resources": [
+					"css/mui.min.css",
+					"js/mui.min.js",
+					"fonts/mui.ttf"
+				],
+				"refer": [],
+				"priority": 0
+			}
+		},
+		"idle": {
+			"resources": [
+				"js/mui.js",
+				"README.md"
+			]
+		}
 	},
 	"unpackage":[
 	  "js/mui.js",
